--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -18,23 +18,54 @@
     <div class="container-fluid">
         <div class="image row">
             <div class="col">
-                
+
                 <h1>STRANGER THAN FICTION</h1>
-                <div class="col-4">
+                <div class="col-6 align-bottom">
                     <ul>
                         <li class="d-flex justify-content-between"><span>YEAR</span> <span>2006<span></li>
                         <li class="d-flex justify-content-between"><span>RAITING</span> <span>7.6/10<span></li>
                         <li class="d-flex justify-content-between"><span>GENRE</span> <span>COMEDY DRAMA FANTASY<span></li>        
                 </ul>
+                 </div>
                 
             </div>
-            <div class="row">
-                <div class="col">
-
-                </div>
-            </div>
         </div>
-    </div>
+        <div class="row">
+                <h2>STORYLINE</h2>
+                <p>Harold Crick (Will Farrell) is an IRS auditor who almost compulsively measures, quantifies and rationalizes his life. Suddenly, he becomes aware of a voice narrating his life, "accurately and with a better vocabulary." The voice is that of a writer we learn is struggling with writer's block (Emma Thompson), mostly about the best way to make Harold die. When Harold overhears his impending doom, he takes action, and eventually makes his way to a professor of literary theory (Dustin Hoffman), who helps him understand the implications of the narrative life he is leading. The main story line seems to be around a woman he is auditing, played by Maggie Gyllenhaal. Realizing he could die at any moment, Harold begins to break free of his limited, orderly life, and joins Gyllenhaal in a romantic relationship. He tracks down Thompson and confronts her with the truth: if she writes about his death, then he will die. But Hoffman is convinced the novel must be written as intended, and Thompson herself is ambivalent. Crick himself reads the novel and encourages her to keep the original ending, which would kill him. Eventually, Thompson writes of the fatal accident, but makes the accident only near-fatal. "If you have someone who willingly, knowingly, goes to his death, well...isn't that the kind of person you want to keep alive?" In the end, there is an ode to Harold, Maggie, Dustin, and most of all, Harold's wristwatch. </p>
+            </div>
+
+            <div class="row">
+                <div class="col-4">
+                    <h2>REVIEWS</h2>
+                    <h4>A Must See!</h4>
+                    <p>This movie was such a great surprise! I saw this at an advanced screening just days after suffering through Marie Antoinette. What a pleasant escape! The cast did an outstanding job. Who doesn't love Will Ferrell, but to see him in this role gives me a whole new level of respect for him as an actor. He simply shines on screen! Maggie Gyllenhaal is a delight. Emma Thompson is brilliant as always. Simply wonderful! The writing was terrific. It was so nice to see a movie that could make you laugh and think (not too hard) at the same time. Direction was well done as well - it was even visually appropriate.
+                        
+                        Go see it and take a friend. You will laugh and be happy for a change after leaving a movie.
+                        
+                        </p>
+                        <h4>Great script!</h4>
+                        <p> saw this film at the Chicago Film Festival opening last night. I went not knowing a thing about it in advance, and was pleasantly surprised. I'd suggest that people DON'T read specifics about this film before seeing it.
+                            
+                            The story/script is fantastic - I'd be surprised if it didn't get nominated for the big original screenplay awards. It's interesting, funny, poignant, and quite charming, actually.
+                            
+                            The casting in general is wonderful... As someone else said, Hoffman is perfectly understated... I'd never seen Maggie Gyllenhaal before, but I'm a fan after seeing this one. And Emma Thompson could see a best supporting actress nod for this film.
+                            
+                            Sadly, I thought the film's weakest point was the casting of Will Ferrell in the lead. He's not bad by any means, but he just doesn't work at the same level as the rest of the cast. Kudos to him for what he DOES accomplish in this film, but it would've had plenty of starpower without him, and the role could've been used to showcase someone else's talent.
+                            
+                            All in all, thumbs up.
+                            
+                            Just my two cents.
+                            
+                            </p>
+                        
+                </div>
+                <div class="col-8">
+                        
+                    </div>
+            </div>
+        
+   
     {% endblock %}
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
