--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,13 +1,15 @@
-body{
-    font-family: 'Lato', sans-serif;
-    
+html{
+    font-family: 'Lato', sans-serif; 
+    font-size: 12px;
 }
 .image{
-    background: url('/static/img/stranger4.jpg') no-repeat center center fixed;
+    background: url('img/stranger4.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    color: red;
+    height: 30em;
+    color:white;
 }
 * { box-sizing: content-box;}
+
