--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -36,7 +36,7 @@
             </div>
 
             <div class="row">
-                <div class="col-4">
+                <div class="col-6">
                     <h2>REVIEWS</h2>
                     <h4>A Must See!</h4>
                     <p>This movie was such a great surprise! I saw this at an advanced screening just days after suffering through Marie Antoinette. What a pleasant escape! The cast did an outstanding job. Who doesn't love Will Ferrell, but to see him in this role gives me a whole new level of respect for him as an actor. He simply shines on screen! Maggie Gyllenhaal is a delight. Emma Thompson is brilliant as always. Simply wonderful! The writing was terrific. It was so nice to see a movie that could make you laugh and think (not too hard) at the same time. Direction was well done as well - it was even visually appropriate.
@@ -60,10 +60,50 @@
                             </p>
                         
                 </div>
-                <div class="col-8">
-                        
-                    </div>
+                <div class="row">
+                    <div class="card col-4 mb-4" style="width: 13rem;">
+                        <img class="card-img-top" src="img/will.jpg" alt="Will Ferrell">
+                        <div class="card-body">
+                        <h3>Harold Crick</h3>
+                         <a href="http://www.imdb.com/name/nm0002071/?ref_=tt_ov_st_sm"<h4 class="card-title">Will Ferrell</h4></a>
+                         
+                        </div>
+                      </div>
+                   
+                    
+                        <div class="card col-4 mb-4" style="width: 13rem;">
+                            <img class="card-img-top" src="img/maggie.jpg" alt="Maggie Gyllenhaal">
+                            <div class="card-body">
+                             <h3>Ana Pascal</h3>
+                             <a href="http://www.imdb.com/name/nm0350454/?ref_=tt_cl_t13"<h4 class="card-title">Maggie Gyllenhaal</h4></a>
+                             
+                            </div>
+                          </div>
+
+                          <div class="d-flex justify-content-center">
+                          <div class="row">
+                          <div class="card col-4 mb-4" style="width: 13rem;">
+                                <img class="card-img-top" src="img/emma.jpg" alt="Emma Thompson">
+                                <div class="card-body">
+                                 <h3>Karen Eiffel</h3>
+                                 <a href="http://www.imdb.com/name/nm0000668/?ref_=tt_ov_st_sm"<h4 class="card-title">Emma Thompson</h4></a>
+                                 
+                                </div>
+                              </div>
+                              <div class="card col-4" style="width: 13rem;">
+                                    <img class="card-img-top" src="img/dustin.jpg" alt="Dustin Hoffman">
+                                    <div class="card-body">
+                                     <h3>Professor Jules Hilbert</h3>
+                                     <a href="http://www.imdb.com/name/nm0000163/?ref_=ttfc_fc_cl_t25"<h4 class="card-title">Dustin Hoffman</h4></a>
+                                     
+                                    </div>
+                                  </div>
+                                </div>
+                                 
+                                </div> 
+                                <a href="#">Full Cast..</a>
             </div>
+        </div>
         
    
     {% endblock %}
