--- a/src/templates/another-page.twig
+++ b/src/templates/another-page.twig
@@ -2,16 +2,108 @@
 
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <img class="img-fluid" src="/img/dummy.png" alt="dummy image">
-            </div>
-            <div class="col p-4">
-                <h1>Another page</h1>
-                <p>Back to <a href="/">homepage</a></p>
-            </div>
 
+
+
+
+<div class="row">
+        <div class="col-6">
+                <div class="card mb-4">
+                        
+                    <img class="card-img-top" src="img/will.jpg" alt="Will Ferrell">
+                    <div class="card-body">
+                      <h3>Harold Crick</h3>
+                      <a href="http://www.imdb.com/name/nm0002071/?ref_=tt_ov_st_sm"<h4 class="card-title">Will Ferrell</h4></a>  
+                    </div>
+                </div>
+        </div>
+        <div class="col-6">
+                <div class="card mb-4">
+                        
+                    <img class="card-img-top" src="/maggie.jpg" alt="Maggie Gyllenhaal">
+                    <div class="card-body">
+                            <h3>Ana Pascal</h3>
+                            <a href="http://www.imdb.com/name/nm0350454/?ref_=tt_cl_t13"<h4 class="card-title">Maggie Gyllenhaal</h4></a>
+                    </div>
+                </div>
+        </div>
+    </div>
+    
+    <div class="d-flex justify-content-center">
+            <div class="row">
+                <div class="col-6">
+                        <div class="card mb-4">
+                                
+                            <img class="card-img-top" src="/img/emma.jpg" alt="Emma Thompson">
+                            <div class="card-body">
+                             <h3>Karen Eiffel</h3>
+                             <a href="http://www.imdb.com/name/nm0000668/?ref_=tt_ov_st_sm"<h4 class="card-title">Emma Thompson</h4></a>
+                                
+                            </div>
+                        </div>
+        
+                </div>
+                <div class="col-6">
+                        <div class="card mb-4">
+                            <img class="card-img-top" src="/img/dustin.jpg" alt="Dustin Hoffman">
+                            <div class="card-body">
+                            <h3>Professor Jules Hilbert</h3>
+                            <a href="http://www.imdb.com/name/nm0000163/?ref_=ttfc_fc_cl_t25"<h4 class="card-title">Dustin Hoffman</h4></a>
+                            </div>
+                        </div>
+        
+                </div>
+            </div>
+            </div>
+    </div
+
+
+
+
+
+<div class="row">
+<div class="card col-4 ml-4 mr-4" style="width: 10rem;">
+    <img class="card-img-top" src="img/will.jpg" alt="Will Ferrell">
+    <div class="card-body">
+    <h3>Harold Crick</h3>
+     <a href="http://www.imdb.com/name/nm0002071/?ref_=tt_ov_st_sm"<h4 class="card-title">Will Ferrell</h4></a>
+     
+    </div>
+  </div>
+
+
+    <div class="card col-4 ml-4 mr-4" style="width: 10rem;">
+        <img class="card-img-top" src="img/maggie.jpg" alt="Maggie Gyllenhaal">
+        <div class="card-body">
+         <h3>Ana Pascal</h3>
+         <a href="http://www.imdb.com/name/nm0350454/?ref_=tt_cl_t13"<h4 class="card-title">Maggie Gyllenhaal</h4></a>
+         
+        </div>
+      </div>
+    
+      <div class="d-flex justify-content-center">
+      <div class="row">
+      <div class="card col-4 mb-4" style="width: 13rem;">
+            <img class="card-img-top" src="img/emma.jpg" alt="Emma Thompson">
+            <div class="card-body">
+             <h3>Karen Eiffel</h3>
+             <a href="http://www.imdb.com/name/nm0000668/?ref_=tt_ov_st_sm"<h4 class="card-title">Emma Thompson</h4></a>
+             
+            </div>
+          </div>
+          </div>
+          <div class="card col-4" style="width: 13rem;">
+                <img class="card-img-top" src="img/dustin.jpg" alt="Dustin Hoffman">
+                <div class="card-body">
+                 <h3>Professor Jules Hilbert</h3>
+                 <a href="http://www.imdb.com/name/nm0000163/?ref_=ttfc_fc_cl_t25"<h4 class="card-title">Dustin Hoffman</h4></a>
+                 
+                </div>
+              </div>
+            </div>
+        </div> 
+            </div> 
+            <a href="#">Full Cast..</a>
         </div>
     </div>
 {% endblock %}
