--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="">
+    
 </head>
 
 <body>
@@ -60,48 +60,57 @@
                             </p>
                         
                 </div>
-                <div class="row">
-                    <div class="card col-4 mb-4" style="width: 13rem;">
-                        <img class="card-img-top" src="img/will.jpg" alt="Will Ferrell">
-                        <div class="card-body">
-                        <h3>Harold Crick</h3>
-                         <a href="http://www.imdb.com/name/nm0002071/?ref_=tt_ov_st_sm"<h4 class="card-title">Will Ferrell</h4></a>
-                         
-                        </div>
-                      </div>
-                   
-                    
-                        <div class="card col-4 mb-4" style="width: 13rem;">
-                            <img class="card-img-top" src="img/maggie.jpg" alt="Maggie Gyllenhaal">
-                            <div class="card-body">
-                             <h3>Ana Pascal</h3>
-                             <a href="http://www.imdb.com/name/nm0350454/?ref_=tt_cl_t13"<h4 class="card-title">Maggie Gyllenhaal</h4></a>
-                             
-                            </div>
-                          </div>
 
-                          <div class="d-flex justify-content-center">
-                          <div class="row">
-                          <div class="card col-4 mb-4" style="width: 13rem;">
-                                <img class="card-img-top" src="img/emma.jpg" alt="Emma Thompson">
-                                <div class="card-body">
-                                 <h3>Karen Eiffel</h3>
-                                 <a href="http://www.imdb.com/name/nm0000668/?ref_=tt_ov_st_sm"<h4 class="card-title">Emma Thompson</h4></a>
-                                 
-                                </div>
-                              </div>
-                              <div class="card col-4" style="width: 13rem;">
-                                    <img class="card-img-top" src="img/dustin.jpg" alt="Dustin Hoffman">
+                
+                        <div class="col-2">
+                                <div class="card mb-4">
+                                        
+                                    <img class="card-img-top" src="img/will.jpg" alt="Will Ferrell">
                                     <div class="card-body">
-                                     <h3>Professor Jules Hilbert</h3>
-                                     <a href="http://www.imdb.com/name/nm0000163/?ref_=ttfc_fc_cl_t25"<h4 class="card-title">Dustin Hoffman</h4></a>
-                                     
+                                      <h3>Harold Crick</h3>
+                                      <a href="http://www.imdb.com/name/nm0002071/?ref_=tt_ov_st_sm"<h4 class="card-title">Will Ferrell</h4></a>  
                                     </div>
-                                  </div>
                                 </div>
-                                 
-                                </div> 
-                                <a href="#">Full Cast..</a>
+                        </div>
+                        <div class="col-2">
+                                <div class="card mb-4">
+                                        
+                                    <img class="card-img-top" src="img/maggie.jpg" alt="Maggie Gyllenhaal">
+                                    <div class="card-body">
+                                            <h3>Ana Pascal</h3>
+                                            <a href="http://www.imdb.com/name/nm0350454/?ref_=tt_cl_t13"<h4 class="card-title">Maggie Gyllenhaal</h4></a>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                    
+                    <div class="d-flex justify-content-center">
+                            <div class="row">
+                                <div class="col-2">
+                                        <div class="card mb-4">
+                                                
+                                            <img class="card-img-top" src="/img/emma.jpg" alt="Emma Thompson">
+                                            <div class="card-body">
+                                             <h3>Karen Eiffel</h3>
+                                             <a href="http://www.imdb.com/name/nm0000668/?ref_=tt_ov_st_sm"<h4 class="card-title">Emma Thompson</h4></a>
+                                                
+                                            </div>
+                                        </div>
+                        
+                                </div>
+                                <div class="col-2">
+                                        <div class="card mb-4">
+                                            <img class="card-img-top" src="/img/dustin.jpg" alt="Dustin Hoffman">
+                                            <div class="card-body">
+                                            <h3>Professor Jules Hilbert</h3>
+                                            <a href="http://www.imdb.com/name/nm0000163/?ref_=ttfc_fc_cl_t25"<h4 class="card-title">Dustin Hoffman</h4></a>
+                                            </div>
+                                        </div>
+                        
+                                </div>
+                            </div>
+                            </div>
+                    </div
             </div>
         </div>
         
